<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_console"
        android:orderInCategory="100"
        android:title="@string/text_console"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_log"
        android:orderInCategory="200"
        android:title="@string/text_log"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_help"
        android:orderInCategory="300"
        android:title="@string/text_help"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_import"
        android:orderInCategory="400"
        android:title="@string/text_copy_to_my_scripts"
        app:showAsAction="never"/>

</menu>