<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="wrap_content"
              android:layout_height="match_parent"
              android:layout_gravity="right"
              android:orientation="horizontal">

    <org.autojs.autojs.ui.widget.ToolbarMenuItem
        android:id="@+id/replace"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        app:icon="@drawable/ic_ali_replace"
        app:icon_color="@color/toolbar"
        app:text="@string/text_replace"/>

    <org.autojs.autojs.ui.widget.ToolbarMenuItem
        android:id="@+id/find_prev"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        app:icon="@drawable/ic_ali_up"
        app:icon_color="@color/toolbar"
        app:text="@string/text_find_prev"/>

    <org.autojs.autojs.ui.widget.ToolbarMenuItem
        android:id="@+id/find_next"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        app:icon="@drawable/ic_ali_down"
        app:icon_color="@color/toolbar"
        app:text="@string/text_find_next"/>


    <org.autojs.autojs.ui.widget.ToolbarMenuItem
        android:id="@+id/cancel_search"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        app:icon="@drawable/ic_close_white_48dp"
        app:icon_color="@color/toolbar"
        app:text="@string/text_cancel"/>


</LinearLayout>