<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="wrap_content"
              android:layout_height="match_parent"
              android:layout_gravity="right"
              android:orientation="horizontal">

    <org.autojs.autojs.ui.widget.ToolbarMenuItem
        android:id="@+id/run"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        app:icon="@drawable/ic_play_arrow_white_48dp"
        app:icon_color="@color/toolbar"
        app:text="@string/text_run"/>

    <org.autojs.autojs.ui.widget.ToolbarMenuItem
        android:id="@+id/undo"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        app:icon="@drawable/ic_undo_white_48dp"
        app:icon_color="@color/toolbar"
        app:text="@string/text_undo"/>

    <org.autojs.autojs.ui.widget.ToolbarMenuItem
        android:id="@+id/redo"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        app:icon="@drawable/ic_redo_white_48dp"
        app:icon_color="@color/toolbar"
        app:text="@string/text_redo"/>

    <org.autojs.autojs.ui.widget.ToolbarMenuItem
        android:id="@+id/save"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:enabled="false"
        app:icon="@drawable/ic_save_white_48dp"
        app:icon_color="@color/toolbar"
        app:text="@string/text_save"/>


</LinearLayout>