<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingLeft="16dp"
              android:paddingRight="16dp"
              android:paddingTop="16dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/keywords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_find"/>
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/checkbox_regex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_regex"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/replacement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_replace"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkbox_replace"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_replace"/>

        <CheckBox
            android:id="@+id/checkbox_replace_all"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_replace_all"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/hint_regex"
        android:textColor="#929397"
        android:textSize="12sp"/>


</LinearLayout>