<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingLeft="16dp"
              android:paddingRight="16dp">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/loop_times"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_loop_times"
            android:inputType="number"
            android:text="0"
            tools:ignore="HardcodedText"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="4dp"
        android:text="@string/hint_loop_times"
        android:textColor="#77000000"
        android:textSize="12sp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/loop_interval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_loop_interval"
            android:inputType="numberDecimal"
            android:text="1.0"
            tools:ignore="HardcodedText"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/loop_delay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_loop_delay"
            android:inputType="numberDecimal"
            android:text="0.0"
            tools:ignore="HardcodedText"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="4dp"
        android:text="@string/hint_loop_delay"
        android:textColor="#77000000"
        android:textSize="12sp"/>
</LinearLayout>